--- a/1.html
+++ b/1.html
@@ -12,7 +12,9 @@
   <li><a href="3.html">JavaScript</li></a>
 </ul>
 <h2>HTML</h2>
-<p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It defines the meaning and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
-<img src="html.jpg" width="500px">
+<p>
+  이것은 소화기내시경 사진을 모은것입니다. 
+</p>
+  <img src="html.jpg" width="500px">
 </body>
 </html>
